terraform/main.tf
# ----------------------------------------------------
# AWS Provider
# ----------------------------------------------------
provider "aws" {
  region = var.region
}

# ----------------------------------------------------
# VPC
# ----------------------------------------------------
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  tags = merge(var.common_tags, {
    Name = "Terraform-VPC"
  })
}

# ----------------------------------------------------
# Public Subnet
# ----------------------------------------------------
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidr
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = true

  tags = merge(var.common_tags, {
    Name = "Public-Subnet"
  })
}

# ----------------------------------------------------
# Internet Gateway
# ----------------------------------------------------
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(var.common_tags, {
    Name = "Terraform-IGW"
  })
}

# ----------------------------------------------------
# Public Route Table
# ----------------------------------------------------
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = merge(var.common_tags, {
    Name = "Public-RouteTable"
  })
}

# ----------------------------------------------------
# Route Table Association
# ----------------------------------------------------
resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}

# ----------------------------------------------------
# Security Group
# ----------------------------------------------------
resource "aws_security_group" "web" {
  name   = "terraform-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    description = "Allow SSH"

    from_port   = 22
    to_port     = 22
    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"

    from_port   = 80
    to_port     = 80
    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow All Outbound"

    from_port   = 0
    to_port     = 0
    protocol    = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.common_tags, {
    Name = "Terraform-SG"
  })
}

# ----------------------------------------------------
# EC2 Instance
# ----------------------------------------------------
resource "aws_instance" "web" {
  ami                         = var.ami
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.web.id]
  associate_public_ip_address = true

  tags = merge(var.common_tags, {
    Name = "Terraform-WebServer"
  })
}
